--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "4.11.3",
     "finnhub": "1.2.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
