--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "4.11.3",
     "finnhub": "1.2.1",
     "react": "17.0.0",
+    "react-addons-update": "15.6.3",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3"
   },
